--- a/html/project-bid.html
+++ b/html/project-bid.html
@@ -37,10 +37,10 @@
       </div>
       <div class="container shadow bg-white rounded" id="profile-container">
         <div class="row" id="description-row">
-          <div class="col-md-2 col-sm-12">
-            <img src="img/project-pic.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+          <div class="col-md-3 col-xs-12 text-center">
+            <img src="img/project-pic.png" class="img-fluid rounded" alt="">
           </div>
-          <div class="col-md-10">
+          <div class="col-md-9">
             <h2 class="font-weight-bold mb-sm-3">پروژه طراحی سایت جاب‌اونجا</h2>
             <div class="row">
               <div class="col-sm-12 deadline">
@@ -66,28 +66,28 @@
           <div class="col-sm-12">
             <h5 class="font-weight-bold">مهارت‌های لازم:</h5>
             <div class="row skills">
-                <div class="col-sm-auto d-inline shadow-sm rounded bg-white skill">
+                <div class="col-xs-auto d-inline shadow-sm rounded bg-white skill">
                   <span>HTML </span><span class="skill-point">5</span>
                 </div>
-                <div class="col-sm-auto d-inline shadow-sm rounded bg-white skill">
+                <div class="col-xs-auto d-inline shadow-sm rounded bg-white skill">
                   CSS <span class="skill-point">3</span>
                 </div>
-                <div class="col-sm-auto d-inline shadow-sm rounded bg-white skill">
+                <div class="col-xs-auto d-inline shadow-sm rounded bg-white skill">
                   Javascript <span class="skill-point">16</span>
                 </div>
-                <div class="col-sm-auto d-inline shadow-sm rounded bg-white skill">
+                <div class="col-xs-auto d-inline shadow-sm rounded bg-white skill">
                   Typescript <span class="skill-point">2</span>
                 </div>
               </div>
           </div>
         </div>
         <div class="row" id="bid-row">
-          <div class="col-sm-12">
+          <div class="col-xs-auto col-sm-12">
             <h5>ثبت پیشنهاد:</h5>
             <form class="form-inline">
-              <div class="form-group ml-sm-3 mb-2">
-                  <input type="number" class="form-control" id="bidAmount" placeholder="پیشنهاد خود را وارد کنید">
-                  <span id="bidAmountUnit">تومان</span>
+              <div class="form-row ml-3 mb-2">
+                  <input type="number" class="form-control d-inline" id="bidAmount" placeholder="پیشنهاد خود را وارد کنید">
+                  <span class="d-inline" id="bidAmountUnit">تومان</span>
               </div>
               <button type="submit" id="submitBidAmountBtn" class="btn mb-2">ارسال</button>
             </form>
