Finish project variations

--- a/html/project-already-bid.html
+++ b/html/project-already-bid.html
@@ -83,14 +83,10 @@
         </div>
         <div class="row" id="bid-row">
           <div class="col-xs-auto col-sm-12">
-            <h5 class="mb-3 font-weight-bolder">ثبت پیشنهاد</h5>
-            <form class="form-inline">
-              <div class="form-row ml-3 mb-2">
-                  <input type="number" class="form-control d-inline" id="bidAmount" placeholder="پیشنهاد خود را وارد کنید">
-                  <span class="d-inline" id="bidAmountUnit">تومان</span>
+              <div class="col-xs-auto col-sm-12 text-success">
+                <i class="flaticon-correct-symbol ml-1"></i>
+                <span>شما قبلاً پیشنهاد خود را ثبت کرده‌اید</span>
               </div>
-              <button type="submit" id="submitBidAmountBtn" class="btn mb-2">ارسال</button>
-            </form>
           </div>
         </div>
       </div>
