--- a/html/project-deadline-reached.html
+++ b/html/project-deadline-reached.html
@@ -43,13 +43,17 @@
           <div class="col-md-9">
             <h2 class="font-weight-bold mb-3 mt-1">پروژه طراحی سایت جاب‌اونجا</h2>
             <div class="row">
-              <div class="col-sm-12 deadline">
+              <div class="col-sm-12 deadline-reached">
                 <i class="flaticon-success ml-1"></i>
-                <span><span>زمان باقی‌مانده:</span> ۱۷ دقیقه و ۲۵ ثانیه</span>
+                <span class="font-weight-bold">مهلت تمام شده</span>
               </div>
               <div class="col-sm-12 budget">
                 <i class="flaticon-money-bag ml-1"></i>
                 <span>بودجه: ۲۵۰۰ تومان</span>
+              </div>
+              <div class="col-sm-12 text-success">
+                <i class="flaticon-correct-symbol ml-1"></i>
+                <span>برنده: وحید محمدی</span>
               </div>
             </div>
             <h5 class="font-weight-bold my-md-3">توضیحات</h5>
@@ -82,15 +86,9 @@
           </div>
         </div>
         <div class="row" id="bid-row">
-          <div class="col-xs-auto col-sm-12">
-            <h5 class="mb-3 font-weight-bolder">ثبت پیشنهاد</h5>
-            <form class="form-inline">
-              <div class="form-row ml-3 mb-2">
-                  <input type="number" class="form-control d-inline" id="bidAmount" placeholder="پیشنهاد خود را وارد کنید">
-                  <span class="d-inline" id="bidAmountUnit">تومان</span>
-              </div>
-              <button type="submit" id="submitBidAmountBtn" class="btn mb-2">ارسال</button>
-            </form>
+          <div class="col-xs-auto col-sm-12 deadline-reached">
+            <i class="flaticon-danger ml-1"></i>
+            <span>مهلت ارسال پیشنهاد برای این پروژه به پایان رسیده است!</span>
           </div>
         </div>
       </div>
