--- a/html/project-deadline-reached.html
+++ b/html/project-deadline-reached.html
@@ -35,7 +35,7 @@
         <div class="row blue-bar">
         </div>
       </div>
-      <div class="container shadow bg-white rounded" id="profile-container">
+      <div class="container shadow bg-white rounded" id="project-container">
         <div class="row" id="description-row">
           <div class="col-md-3 col-xs-12 text-center">
             <img src="img/project-pic.png" class="img-fluid rounded" alt="">
