--- a/html/project-already-bid.html
+++ b/html/project-already-bid.html
@@ -37,11 +37,11 @@
       </div>
       <div class="container shadow bg-white rounded" id="project-container">
         <div class="row" id="description-row">
-          <div class="col-md-3 col-xs-12 text-center">
-            <img src="img/project-pic.png" class="img-fluid rounded" alt="">
+          <div class="col-lg-3 col-md-5 col-xs-12 text-center" id="project-picture-col">
+            <img src="img/project-pic.png" class="img-fluid" id="project-picture" alt="">
           </div>
-          <div class="col-md-9">
-            <h2 class="font-weight-bold mb-3 mt-1">پروژه طراحی سایت جاب‌اونجا</h2>
+          <div class="col-lg-9 col-md-7 pr-md-0" id="project-description-col">
+            <h2 class="font-weight-bold mb-3 mt-md-1 mt-sm-2" id="project-title">پروژه طراحی سایت جاب‌اونجا</h2>
             <div class="row">
               <div class="col-sm-12 deadline">
                 <i class="flaticon-success ml-1"></i>
