--- a/html/register.html
+++ b/html/register.html
@@ -51,9 +51,27 @@
                       <input type="text" class="form-control" id="last-name" placeholder="نام خانوادگی">
                     </div>
                   </div>
-                  <div class="form-row">
+                  <div class="form-row mb-2">
                     <div class="col">
                       <input type="text" class="form-control" id="job-title" placeholder="شغل">
+                    </div>
+                  </div>
+                  <div class="form-row mb-2">
+                    <div class="col">
+                      <input type="text" class="form-control" id="username" placeholder="نام کاربری">
+                    </div>
+                  </div>
+                  <div class="form-row mb-2">
+                    <div class="col">
+                      <input type="password" class="form-control" id="password" placeholder="گذرواژه">
+                    </div>
+                    <div class="col">
+                      <input type="password" class="form-control" id="password-repeat" placeholder="تکرار گذرواژه">
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="col">
+                      <input type="text" class="form-control" id="picture-url" placeholder="لینک تصویر پروفایل">
                     </div>
                   </div>
                   <div class="form-row mb-2">
