--- a/html/profile-page.html
+++ b/html/profile-page.html
@@ -37,8 +37,10 @@
       </div>
       <div class="container" id="profile-container">
         <div class="row mb-4" id="name-pic-row">
-          <div class="col-md-auto col-xs-12 text-center">
+          <div class="col-md-auto col-xs-12 text-center d-flex align-items-center" id="profile-picture-col">
             <img src="img/kiani.jpg" class="img-fluid profile-picture shadow-sm" alt="">
+            <div id="blue-thing"></div>
+            <div id="blue-thing-wider"></div>
           </div>
           <div class="col-md-9">
             <h2 class="font-weight-bold mt-1">محمدرضا کیانی</h2>
