--- a/html/register.html
+++ b/html/register.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/slider.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
   </head>
   <body class="text-right h-100 w-100">
     <header>
@@ -23,9 +24,9 @@
       </nav>
     </header>
     <main>
-      <div class="container-fluid slider-container">
+      <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12 slider-col">
                 <div id="slideshow">
                   <div class="slide-wrapper">
                     <div class="slide"><h1 class="text-black-50">اسلاید ۱</h1></div>
@@ -40,7 +41,7 @@
       </div>
       <div class="container" id="register-form-container">
         <div class="row">
-          <div class="col-sm-4 mx-auto justify-content-center shadow-sm rounded bg-light register-form-col">
+          <div class="col-lg-5 col-md-8 col-11 mx-auto justify-content-center shadow-lg rounded bg-light register-form-col">
             <h2 class="text-center mb-3">ثبت‌نام</h2>
               <form>
                   <div class="form-row mb-2">
@@ -50,8 +51,6 @@
                     <div class="col">
                       <input type="text" class="form-control" id="last-name" placeholder="نام خانوادگی">
                     </div>
-                  </div>
-                  <div class="form-row mb-2">
                     <div class="col">
                       <input type="text" class="form-control" id="job-title" placeholder="شغل">
                     </div>
@@ -75,14 +74,16 @@
                     </div>
                   </div>
                   <div class="form-row mb-2">
-                      <div class="col">
-                          <div class="form-group">
-                            <label for=""></label>
-                            <textarea class="form-control" name="bio" id="bio" rows="3" placeholder="درباره"></textarea>
-                          </div>
+                    <div class="col">
+                      <div class="form-group">
+                        <label for=""></label>
+                        <textarea class="form-control" name="bio" id="bio" rows="3" placeholder="درباره"></textarea>
                       </div>
                     </div>
-                  <button type="submit" class="btn btn-primary">ثبت‌نام</button>
+                  </div>
+                  <div class="form-row mb-2 justify-content-center">
+                  <button type="submit" class="btn submitBtn">ثبت مشخصات</button>
+                </div>
                 </form>
           </div>
         </div>
