Adjust margin for user skills

--- a/html/profile-page.html
+++ b/html/profile-page.html
@@ -72,7 +72,7 @@
                 </form>
               </div>
             </div>
-            <div class="row skills">
+            <div class="row skills mt-2">
                 <div class="col-xs-auto compact-card skill-removable">
                   <span class="skill-name">HTML </span>
                   <span class="skill-point"><span class="skill-point-text">5</span></span>
