--- a/html/other-user-profile.html
+++ b/html/other-user-profile.html
@@ -57,7 +57,7 @@
         </div>
         <div class="row mt-3">
           <div class="col-sm-12">
-            <div class="row skills">
+            <div class="row skills mt-2">
               <div class="col-xs-auto compact-card skill-endorsable">
                 <span class="skill-name">HTML </span>
                 <span class="skill-point"><span class="skill-point-text">5</span></span>
