--- a/html/profile-page.html
+++ b/html/profile-page.html
@@ -33,15 +33,15 @@
     </header>
     <main>
       <div class="container-fluid">
-        <div class="row blue-bar-wider">
+        <div class="row blue-bar" id="blue-bar-wider">
         </div>
       </div>
       <div class="container px-5" id="profile-container">
         <div class="row mb-4" id="name-pic-row">
           <div class="col-md-auto col-sm-auto col-auto text-center d-flex align-items-center" id="profile-picture-col">
             <img src="img/kiani.jpg" class="img-fluid profile-picture shadow-sm" alt="">
-            <div id="blue-thing"></div>
-            <div id="blue-thing-wider"></div>
+            <div class="blue-decoration"></div>
+            <div class="blue-decoration" id="blue-decoration-wider"></div>
           </div>
           <div class="col-md-auto col-sm-auto" id="profile-name">
             <h2 class="font-weight-bold mt-1">محمدرضا کیانی</h2>
@@ -61,7 +61,7 @@
               <div class="col-sm-auto my-auto pl-0 ml-2">
                 <h5 class="font-weight-bold">مهارت‌ها:</h5>
               </div>
-              <div class="col-sm-auto compact-card skill-add-dropdown align-items-center">
+              <div class="col-auto compact-card skill-add-dropdown align-items-center">
                 <form class="form-inline">
                   <div class="form-row ml-1">
                     <select class="form-control" id="addSkillMenu">
