--- a/html/register.html
+++ b/html/register.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fa" dir="rtl">
   <head>
-    <title>Project-Bid</title>
+    <title>Register</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
