Add grids of profiles and projects list

--- a/html/home-page.html
+++ b/html/home-page.html
@@ -58,8 +58,11 @@
       </div>
       <div class="container px-5" id="home-main-container">
         <div class="row">
-          <div class="col-md-3 col-sm-auto col-auto text-center d-flex align-items-center" id="profiles-list">
-            <div id="user-search"></div>
+          <div class="col-md-3 col-sm-auto col-auto" id="profiles-list">
+            <div class="bg-white rounded shadow-sm w-100" id="user-search"></div>
+            <div class="profile-brief"></div>
+            <div class="profile-brief"></div>
+            <div class="profile-brief"></div>
             <div class="profile-brief"></div>
           </div>
           <div class="col-md-9 col-sm-auto" id="projects-list">
