Finish list of users

--- a/html/home-page.html
+++ b/html/home-page.html
@@ -43,7 +43,7 @@
                 </p>
               </div>
             </div>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center mt-3">
               <div class="col-md-7" id="home-search-bar">
                 <form class="form-inline d-flex justify-content-between" id="home-search-form">
                     <div class="form-group flex-grow-1 ml-1">
@@ -58,14 +58,40 @@
       </div>
       <div class="container px-5" id="home-main-container">
         <div class="row">
-          <div class="col-md-3 col-sm-auto col-auto" id="profiles-list">
-            <div class="bg-white rounded shadow-sm w-100" id="user-search"></div>
-            <div class="profile-brief"></div>
-            <div class="profile-brief"></div>
-            <div class="profile-brief"></div>
-            <div class="profile-brief"></div>
+          <div class="col-lg-3 col-md-5 col-12" id="profiles-list">
+            <div class="bg-white rounded shadow-sm w-100 align-items-center" id="user-search">
+              <input type="text" class="form-control h-100" name="user-name" id="user-search-input" placeholder="جستجوی نام کاربر">
+            </div>
+            <div class="profile-brief">
+              <img src="img/hayeri.jpg" class="img-fluid rounded profile-brief-picture" alt="">
+              <div>
+                <p>صادق حائری</p>
+                <p>گیک</p>
+              </div>
+            </div>
+            <div class="profile-brief">
+              <img src="img/kiani.jpg" class="img-fluid rounded profile-brief-picture" alt="">
+              <div>
+                <p>محمدرضا کیانی</p>
+                <p>چیف تی‌ای</p>
+              </div>
+            </div>
+            <div class="profile-brief">
+              <img src="img/bateni.jpg" class="img-fluid rounded profile-brief-picture" alt="">
+              <div>
+                <p>آبتین باطنی</p>
+                <p>توسعه‌دهنده‌ی فرانت‌اند</p>
+              </div>
+            </div>
+            <div class="profile-brief">
+              <img src="img/soltanloo.jpg" class="img-fluid rounded profile-brief-picture" alt="">
+              <div>
+                <p>حسین سلطانلو</p>
+                <p>دانشجو</p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-9 col-sm-auto" id="projects-list">
+          <div class="col-lg-9 col-md-7 col-12 mt-5 mt-md-0" id="projects-list">
             <div class="project-brief"></div>
             <div class="project-brief"></div>
             <div class="project-brief"></div>
