--- a/html/home-page.html
+++ b/html/home-page.html
@@ -92,9 +92,57 @@
             </div>
           </div>
           <div class="col-lg-9 col-md-7 col-12 mt-5 mt-md-0" id="projects-list">
-            <div class="project-brief"></div>
-            <div class="project-brief"></div>
-            <div class="project-brief"></div>
+              <div class="project-brief">
+                  <img src="img/project-pic.png" class="img-fluid rounded project-brief-picture" alt="">
+                  <div class="project-brief-description">
+                    <div class="d-flex align-items-center">
+                      <h5 class="project-brief-title">وبسایت فروشگاهی مشابه دیجی کالا</h5><span class="project-brief-deadline">زمان باقی‌مانده: ۱۷:۲۵</span>
+                    </div>
+                    <p class="project-brief-description-p">یک فروشگاه اینترنتی با قابلیت مدیریت حرفه‌ای سبد خرید حرفه‌ای مقایسه محصولات ارسال پیامک و ایمیل گزارش‌گیری جامع قالب...</p>
+                    <p class="project-brief-budget"><strong>بودجه: ۲۵۰۰ تومان</strong></p>
+                    <div class="project-brief-skills">
+                      <span class="project-brief-skills-title">مهارت‌ها: </span>
+                      <span class="project-brief-skill">TypeScript</span>
+                      <span class="project-brief-skill">JavaScript</span>
+                      <span class="project-brief-skill">CSS</span>
+                      <span class="project-brief-skill">HTML</span>
+                    </div>
+                  </div>
+              </div>
+              <div class="project-brief">
+                  <img src="img/project-pic.png" class="img-fluid rounded project-brief-picture" alt="">
+                  <div class="project-brief-description">
+                    <div class="d-flex align-items-center">
+                      <h5 class="project-brief-title">وبسایت فروشگاهی مشابه دیجی کالا</h5><span class="project-brief-deadline">زمان باقی‌مانده: ۱۷:۲۵</span>
+                    </div>
+                    <p class="project-brief-description-p">یک فروشگاه اینترنتی با قابلیت مدیریت حرفه‌ای سبد خرید حرفه‌ای مقایسه محصولات ارسال پیامک و ایمیل گزارش‌گیری جامع قالب...</p>
+                    <p class="project-brief-budget"><strong>بودجه: ۲۵۰۰ تومان</strong></p>
+                    <div class="project-brief-skills">
+                      <span class="project-brief-skills-title">مهارت‌ها: </span>
+                      <span class="project-brief-skill">TypeScript</span>
+                      <span class="project-brief-skill">JavaScript</span>
+                      <span class="project-brief-skill">CSS</span>
+                      <span class="project-brief-skill">HTML</span>
+                    </div>
+                  </div>
+              </div>
+              <div class="project-brief grayed-out">
+                  <img src="img/project-pic.png" class="img-fluid rounded project-brief-picture" alt="">
+                  <div class="project-brief-description">
+                    <div class="d-flex align-items-center">
+                      <h5 class="project-brief-title">وبسایت فروشگاهی مشابه دیجی کالا</h5><span class="project-brief-deadline project-brief-deadline-reached">مهلت تمام شده</span>
+                    </div>
+                    <p class="project-brief-description-p">یک فروشگاه اینترنتی با قابلیت مدیریت حرفه‌ای سبد خرید حرفه‌ای مقایسه محصولات ارسال پیامک و ایمیل گزارش‌گیری جامع قالب...</p>
+                    <p class="project-brief-budget"><strong>بودجه: ۲۵۰۰ تومان</strong></p>
+                    <div class="project-brief-skills">
+                      <span class="project-brief-skills-title">مهارت‌ها: </span>
+                      <span class="project-brief-skill">TypeScript</span>
+                      <span class="project-brief-skill">JavaScript</span>
+                      <span class="project-brief-skill">CSS</span>
+                      <span class="project-brief-skill">HTML</span>
+                    </div>
+                  </div>
+              </div>
           </div>
         </div>
       </div>
